changed sections' divs to h-screen

--- a/v2/index.html
+++ b/v2/index.html
@@ -19,22 +19,22 @@
           <div class="hidden lg:flex items-center">
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
               >Home</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
               >Blog</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
               >Portfolio</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
               >About</a
             >
           </div>
@@ -72,25 +72,25 @@
       >
         <a
           href="#"
-          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
         >
           Home
         </a>
         <a
           href="#"
-          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
         >
           Blog
         </a>
         <a
           href="#"
-          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
         >
           Portfolio
         </a>
         <a
           href="#"
-          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
         >
           About
         </a>
@@ -116,11 +116,11 @@
           </h1>
           <p class="mt-4 sm:text-xl sm:leading-relaxed text-white">
             Join me on my journey as a self-taught web developer, breaking down
-            barriers to entry
+            barriers to entry along the way
           </p>
           <div class="mt-8 flex flex-wrap justify-center gap-4">
             <button
-              class="block w-full rounded bg-gray-50 px-12 py-3 text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-gray-600 sm:w-auto"
+              class="block w-full rounded bg-gray-50 px-12 py-3 text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500 sm:w-auto"
             >
               Let's Go
             </button>
@@ -140,36 +140,44 @@
 
     <!-- Blog -->
     <section id="blog">
-      <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
-        <div class="text-center mb-32">
-          <h1 class="text-4xl font-bold mb-4">My Journey</h1>
-          <p class="text-lg">Join me as I document and share my experiences</p>
-        </div>
-        <div class="flex flex-col md:flex-row md:space-x-6">
-          <div class="flex-shrink-0 w-full md:w-1/4 lg:w-1/4 mb-6 md:mb-0">
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <img
-                src="https://placehold.it/500x500"
-                alt="Author's portrait"
-                class="h-48 w-full object-cover object-center"
-              />
-              <div class="p-6">
-                <h2 class="text-xl font-semibold mb-2">Author Name</h2>
-                <p class="text-gray-500 text-sm">Published on March 29, 2023</p>
+      <div class="flex lg:h-screen mx-auto max-w-7xl">
+        <div class="w-full m-auto py-32 px-4 sm:px-6 lg:px-8 sm:py-16">
+          <div class="text-center mb-32">
+            <h1 class="text-4xl font-bold mb-4">My Journey</h1>
+            <p class="text-lg">
+              Follow along as I document and share my experiences
+            </p>
+          </div>
+          <div class="flex flex-col md:flex-row md:space-x-6">
+            <div class="flex-shrink-0 w-full md:w-1/4 lg:w-1/4 mb-6 md:mb-0">
+              <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img
+                  src="https://placehold.it/500x500"
+                  alt="Author's portrait"
+                  class="h-48 w-full object-cover object-center"
+                />
+                <div class="p-6">
+                  <h2 class="text-xl font-semibold mb-2">Author Name</h2>
+                  <p class="text-gray-500 text-sm">
+                    Published on March 29, 2023
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="w-full md:w-full lg:w-full">
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <div class="p-6">
-                <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
-                <p class="text-lg mb-4">Here's the content of the blog post.</p>
-                <p class="text-lg mb-4">
-                  Here's some more content for the blog post.
-                </p>
-                <a href="#" class="text-blue-500 hover:text-blue-700"
-                  >Read more &rarr;</a
-                >
+            <div class="w-full md:w-full lg:w-full">
+              <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="p-6">
+                  <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
+                  <p class="text-lg mb-4">
+                    Here's the content of the blog post.
+                  </p>
+                  <p class="text-lg mb-4">
+                    Here's some more content for the blog post.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >Read more &rarr;</a
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -179,66 +187,74 @@
 
     <!-- Portfolio -->
     <section id="portfolio" class="relative bg-gray-50">
-      <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
-        <div class="text-center mb-32">
-          <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
-          <p class="text-lg">Take a look at some of my recent projects</p>
-        </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-          <div>
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <img
-                src="https://placehold.it/600x400"
-                alt="Project Image"
-                class="h-64 w-full object-cover object-center"
-              />
-              <div class="p-6">
-                <h2 class="text-xl font-semibold mb-2">Project Name</h2>
-                <p class="text-gray-500 text-sm mb-4">
-                  Technologies used: HTML, CSS, JavaScript
-                </p>
-                <p class="text-lg mb-4">A short description of the project.</p>
-                <a href="#" class="text-blue-500 hover:text-blue-700"
-                  >View project &rarr;</a
-                >
+      <div class="flex lg:h-screen mx-auto max-w-7xl">
+        <div class="w-full m-auto py-32 px-4 sm:px-6 lg:px-8 sm:py-16">
+          <div class="text-center mb-32">
+            <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
+            <p class="text-lg">Take a look at some of my recent projects</p>
+          </div>
+          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div>
+              <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img
+                  src="https://placehold.it/600x400"
+                  alt="Project Image"
+                  class="h-64 w-full object-cover object-center"
+                />
+                <div class="p-6">
+                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
+                  <p class="text-gray-500 text-sm mb-4">
+                    Technologies used: HTML, CSS, JavaScript
+                  </p>
+                  <p class="text-lg mb-4">
+                    A short description of the project.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >View project &rarr;</a
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div>
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <img
-                src="https://placehold.it/600x400"
-                alt="Project Image"
-                class="h-64 w-full object-cover object-center"
-              />
-              <div class="p-6">
-                <h2 class="text-xl font-semibold mb-2">Project Name</h2>
-                <p class="text-gray-500 text-sm mb-4">
-                  Technologies used: HTML, CSS, JavaScript
-                </p>
-                <p class="text-lg mb-4">A short description of the project.</p>
-                <a href="#" class="text-blue-500 hover:text-blue-700"
-                  >View project &rarr;</a
-                >
+            <div>
+              <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img
+                  src="https://placehold.it/600x400"
+                  alt="Project Image"
+                  class="h-64 w-full object-cover object-center"
+                />
+                <div class="p-6">
+                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
+                  <p class="text-gray-500 text-sm mb-4">
+                    Technologies used: HTML, CSS, JavaScript
+                  </p>
+                  <p class="text-lg mb-4">
+                    A short description of the project.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >View project &rarr;</a
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div>
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <img
-                src="https://placehold.it/600x400"
-                alt="Project Image"
-                class="h-64 w-full object-cover object-center"
-              />
-              <div class="p-6">
-                <h2 class="text-xl font-semibold mb-2">Project Name</h2>
-                <p class="text-gray-500 text-sm mb-4">
-                  Technologies used: HTML, CSS, JavaScript
-                </p>
-                <p class="text-lg mb-4">A short description of the project.</p>
-                <a href="#" class="text-blue-500 hover:text-blue-700"
-                  >View project &rarr;</a
-                >
+            <div>
+              <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img
+                  src="https://placehold.it/600x400"
+                  alt="Project Image"
+                  class="h-64 w-full object-cover object-center"
+                />
+                <div class="p-6">
+                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
+                  <p class="text-gray-500 text-sm mb-4">
+                    Technologies used: HTML, CSS, JavaScript
+                  </p>
+                  <p class="text-lg mb-4">
+                    A short description of the project.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >View project &rarr;</a
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -248,8 +264,9 @@
 
     <!-- About -->
     <section id="about" class="relative">
-      <div
-        class="w-full max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8 relative z-10"
+      <div class="flex lg:h-screen mx-auto max-w-7xl">
+        <div
+        class="w-full m-auto py-32 px-4 sm:px-6 lg:px-8 sm:py-16"
       >
         <div class="text-center mb-32">
           <h1 class="text-4xl font-bold mb-4">About Me</h1>
@@ -265,7 +282,7 @@
               class="h-64 w-full object-cover object-center rounded-lg shadow-md"
             />
           </div>
-          <div class="w-full md:w-3/4 mb-6 px-4">
+          <div class="w-full md:w-3/4 px-4">
             <p class="text-lg mb-4">
               Hi there! My name is [Your Name] and I'm a [Your Profession] with
               [Number] years of experience in the field.
@@ -318,6 +335,8 @@
           </div>
         </div>
       </div>
+      </div>
+      
     </footer>
 
     <!-- Hamburger -->
