--- a/v2/index.html
+++ b/v2/index.html
@@ -186,7 +186,7 @@
     </section>
 
     <!-- Portfolio -->
-    <section id="portfolio" class="relative bg-gray-50">
+    <section id="portfolio" class="relative bg-gray-100">
       <div class="flex lg:h-screen mx-auto max-w-7xl">
         <div class="w-full m-auto py-32 px-4 sm:px-6 lg:px-8 sm:py-16">
           <div class="text-center mb-32">
@@ -309,29 +309,30 @@
     <!-- Footer -->
     <footer class="bg-gray-600 text-white py-8">
       <div class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="md:flex md:items-center md:justify-between">
-          <div class="mb-4 md:mb-0">
+        <div class="lg:flex lg:items-center lg:justify-between">
+          <div class="mb-4 lg:mb-0">
             <span class="font-semibold text-xl tracking-tight"
               >johnbthe.dev</span
             >
           </div>
-          <div class="md:flex md:items-center">
+          <div class="lg:flex lg:items-center">
             <div class="text-sm">
-              <a href="#" class="block mt-4 md:inline-block md:mt-0 mr-6"
+              <a href="#" class="block mt-4 lg:inline-block lg:mt-0 mr-6"
                 >Home</a
               >
-              <a href="#" class="block mt-4 md:inline-block md:mt-0 mr-6"
+              <a href="#" class="block mt-4 lg:inline-block lg:mt-0 mr-6"
                 >Blog</a
               >
-              <a href="#" class="block mt-4 md:inline-block md:mt-0 mr-6"
+              <a href="#" class="block mt-4 lg:inline-block lg:mt-0 mr-6"
                 >Portfolio</a
               >
-              <a href="#" class="block mt-4 md:inline-block md:mt-0">About</a>
+              <a href="#" class="block mt-4 lg:inline-block lg:mt-0 mr-6">About</a>
+              <span class="text-sm block mt-4 lg:inline-block lg:mt-0">
+                &copy; 2023 johnbthe.dev. Made with passion by
+                <a href="https://www.instagram.com/johnbdot/">John B.</a>
+              </span>
             </div>
-            <div class="text-sm md:ml-4 mt-4 md:mt-0">
-              &copy; 2023 johnbthe.dev. Made with passion by
-              <a href="https://www.instagram.com/johnbdot/">John B.</a>
-            </div>
+            
           </div>
         </div>
       </div>
