moved hamburger menu into nav

--- a/v2/index.html
+++ b/v2/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="bg-white shadow-md">
+    <nav class="bg-white shadow-md fixed w-full z-10">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
           <div class="flex-shrink-0 flex items-center">
@@ -62,9 +62,7 @@
           </button>
         </div>
       </div>
-    </nav>
-
-    <!-- Hamburger Menu -->
+      <!-- Hamburger Menu -->
     <div class="hidden w-full" id="menu">
       <nav
         class="text-sm font-medium text-gray-700 space-y-1"
@@ -96,6 +94,9 @@
         </a>
       </nav>
     </div>
+    </nav>
+
+    
 
     <!-- Hero -->
     <section
