--- a/v2/index.html
+++ b/v2/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="bg-white shadow-md fixed w-full z-10">
+    <nav class="backdrop-blur bg-white/80 shadow-md fixed w-full z-10">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
           <div class="flex-shrink-0 flex items-center">
@@ -96,12 +96,10 @@
     </div>
     </nav>
 
-    
-
     <!-- Hero -->
     <section
       id="hero"
-      class="relative bg-gradient-to-b from-blue-500 via-purple-500 to-pink-500"
+      class="relative bg-gradient-to-b from-blue-500 via-purple-500 to-pink-500 py-16 lg:py-0"
     >
       <div
         class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center"
@@ -142,7 +140,7 @@
     <!-- Blog -->
     <section id="blog">
       <div class="flex lg:h-screen mx-auto max-w-7xl">
-        <div class="w-full m-auto py-32 px-4 sm:px-6 lg:px-8 sm:py-16">
+        <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-0">
           <div class="text-center mb-32">
             <h1 class="text-4xl font-bold mb-4">My Journey</h1>
             <p class="text-lg">
@@ -189,7 +187,7 @@
     <!-- Portfolio -->
     <section id="portfolio" class="relative bg-gray-100">
       <div class="flex lg:h-screen mx-auto max-w-7xl">
-        <div class="w-full m-auto py-32 px-4 sm:px-6 lg:px-8 sm:py-16">
+        <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-0">
           <div class="text-center mb-32">
             <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
             <p class="text-lg">Take a look at some of my recent projects</p>
@@ -267,7 +265,7 @@
     <section id="about" class="relative">
       <div class="flex lg:h-screen mx-auto max-w-7xl">
         <div
-        class="w-full m-auto py-32 px-4 sm:px-6 lg:px-8 sm:py-16"
+        class="w-full m-auto px-4 py-16 sm:px-6 lg:px-8 lg:py-0"
       >
         <div class="text-center mb-32">
           <h1 class="text-4xl font-bold mb-4">About Me</h1>
