decreased mb of section headlines to 16

--- a/v2/index.html
+++ b/v2/index.html
@@ -141,7 +141,7 @@
     <section id="blog">
       <div class="flex lg:h-screen mx-auto max-w-7xl">
         <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-0">
-          <div class="text-center mb-32">
+          <div class="text-center mb-16 lg:mb-32">
             <h1 class="text-4xl font-bold mb-4">My Journey</h1>
             <p class="text-lg">
               Follow along as I document and share my experiences
@@ -188,7 +188,7 @@
     <section id="portfolio" class="relative bg-gray-100">
       <div class="flex lg:h-screen mx-auto max-w-7xl">
         <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-0">
-          <div class="text-center mb-32">
+          <div class="text-center mb-16 lg:mb-32">
             <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
             <p class="text-lg">Take a look at some of my recent projects</p>
           </div>
@@ -267,7 +267,7 @@
         <div
         class="w-full m-auto px-4 py-16 sm:px-6 lg:px-8 lg:py-0"
       >
-        <div class="text-center mb-32">
+        <div class="text-center mb-16 lg:mb-32">
           <h1 class="text-4xl font-bold mb-4">About Me</h1>
           <p class="text-lg">
             Here's a little bit about myself and my background
