modified hero section to match colors and style

--- a/v2/index.html
+++ b/v2/index.html
@@ -99,31 +99,28 @@
     <!-- Hero -->
     <section
       id="hero"
-      class="relative bg-gradient-to-b from-blue-500 via-purple-500 to-pink-500 py-16 lg:py-0"
+      class="relative bg-local bg-cover bg-center py-16 lg:py-0"
+      style="background-image: url(./background.jpg)"
     >
     <div class="absolute top-0 left-0 w-full h-16 bg-white z-1"></div>
       <div
         class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center"
       >
-        <div class="mx-auto max-w-xl text-center">
-          <h1 class="text-3xl font-extrabold sm:text-4xl text-white">
+        <div class="mx-auto max-w-xl text-center p-4 rounded-lg backdrop-blur-sm bg-black/20 md:rounded-none md:p-0 md:backdrop-filter-none md:bg-black/0">
+          <h1 class="text-3xl font-extrabold md:drop-shadow-md sm:drop-shadow-none sm:text-4xl text-gray-50">
             Hi. I'm John Bouakhasith,
             <strong
-              class="bg-yellow-300 text-3xl font-extrabold text-transparent bg-clip-text sm:text-4xl sm:block"
+              class="bg-amber-300 text-3xl font-extrabold text-transparent bg-clip-text sm:text-4xl sm:block"
             >
               Self-Taught Web Developer
             </strong>
           </h1>
-          <p class="mt-4 sm:text-xl sm:leading-relaxed text-white">
+          <p class="mt-4 md:drop-shadow-md sm:drop-shadow-none sm:text-xl sm:leading-relaxed text-gray-50">
             Join me on my journey as a self-taught web developer, breaking down
             barriers to entry along the way
           </p>
           <div class="mt-8 flex flex-wrap justify-center gap-4">
-            <button
-              class="block w-full rounded bg-gray-50 px-12 py-3 text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500 sm:w-auto"
-            >
-              Let's Go
-            </button>
+            <button class="block w-full sm:w-auto py-3 px-12 text-sm font-medium text-gray-900 bg-gray-50 rounded hover:text-gray-50 hover:bg-blue-500">Let's Go</button>
           </div>
         </div>
         <div class="absolute inset-x-0 bottom-0">
