added solid drop shadows to texts

--- a/v2/index.html
+++ b/v2/index.html
@@ -106,16 +106,16 @@
       <div
         class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center"
       >
-        <div class="mx-auto max-w-xl text-center p-4 rounded-lg backdrop-blur-sm bg-black/20 md:rounded-none md:p-0 md:backdrop-filter-none md:bg-black/0">
-          <h1 class="text-3xl font-extrabold md:drop-shadow-md sm:drop-shadow-none sm:text-4xl text-gray-50">
-            Hi. I'm John Bouakhasith,
+        <div class="mx-auto max-w-xl text-center">
+          <h1 class="text-3xl font-extrabold sm:text-4xl ">
+            <span class="text-slate-50 text-shadow shadow-gray-950">Hi. I'm John Bouakhasith,</span>
             <strong
-              class="bg-amber-300 text-3xl font-extrabold text-transparent bg-clip-text sm:text-4xl sm:block"
+              class="text-yellow-300 text-shadow shadow-gray-950 text-3xl font-extrabold sm:text-4xl sm:block"
             >
               Self-Taught Web Developer
             </strong>
           </h1>
-          <p class="mt-4 md:drop-shadow-md sm:drop-shadow-none sm:text-xl sm:leading-relaxed text-gray-50">
+          <p class="text-slate-50 text-shadow shadow-gray-950 mt-4 sm:text-xl sm:leading-relaxed">
             Join me on my journey as a self-taught web developer, breaking down
             barriers to entry along the way
           </p>
