--- a/v2/index.html
+++ b/v2/index.html
@@ -99,7 +99,7 @@
     <!-- Hero -->
     <section
       id="hero"
-      class="relative bg-local bg-cover bg-center py-16 lg:py-0"
+      class="relative bg-fixed bg-cover bg-center py-16 lg:py-0"
       style="background-image: url(./background.jpg)"
     >
     <div class="absolute top-0 left-0 w-full h-16 bg-white z-1"></div>
@@ -144,6 +144,7 @@
             <p class="text-lg">
               Follow along as I document and share my experiences
             </p>
+            <hr class="mx-auto my-8 h-1 w-60 border-0 bg-gray-500" />
           </div>
           <div class="flex flex-col md:flex-row md:space-x-6">
             <div class="flex-shrink-0 w-full md:w-1/4 lg:w-1/4 mb-6 md:mb-0">
@@ -189,6 +190,7 @@
           <div class="text-center mb-16 lg:mb-32">
             <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
             <p class="text-lg">Take a look at some of my recent projects</p>
+            <hr class="mx-auto my-8 h-1 w-60 border-0 bg-gray-500" />
           </div>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <div>
@@ -270,6 +272,7 @@
           <p class="text-lg">
             Here's a little bit about myself and my background
           </p>
+          <hr class="mx-auto my-8 h-1 w-60 border-0 bg-gray-500" />
         </div>
         <div class="flex flex-wrap -mx-4">
           <div class="w-full md:w-1/4 mb-6 px-4">
