change separator style

--- a/v2/index.html
+++ b/v2/index.html
@@ -144,7 +144,12 @@
             <p class="text-lg">
               Follow along as I document and share my experiences
             </p>
-            <hr class="mx-auto my-8 h-1 w-60 border-0 bg-gray-500" />
+            <div class="inline-flex items-center justify-center w-full">
+              <hr class="w-64 h-1 my-8 bg-gray-200 border-0 rounded dark:bg-gray-700">
+              <div class="absolute px-4 -translate-x-1/2 bg-white left-1/2 dark:bg-gray-900">
+                  <svg aria-hidden="true" class="w-5 h-5 text-gray-700 dark:text-gray-300" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"/></svg>
+              </div>
+          </div>
           </div>
           <div class="flex flex-col md:flex-row md:space-x-6">
             <div class="flex-shrink-0 w-full md:w-1/4 lg:w-1/4 mb-6 md:mb-0">
@@ -190,7 +195,12 @@
           <div class="text-center mb-16 lg:mb-32">
             <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
             <p class="text-lg">Take a look at some of my recent projects</p>
-            <hr class="mx-auto my-8 h-1 w-60 border-0 bg-gray-500" />
+            <div class="inline-flex items-center justify-center w-full">
+              <hr class="w-64 h-1 my-8 bg-gray-200 border-0 rounded dark:bg-gray-700">
+              <div class="absolute px-4 -translate-x-1/2 bg-gray-100 left-1/2 dark:bg-gray-900">
+                  <svg aria-hidden="true" class="w-5 h-5 text-gray-700 dark:text-gray-300" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"/></svg>
+              </div>
+          </div>
           </div>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <div>
@@ -272,7 +282,12 @@
           <p class="text-lg">
             Here's a little bit about myself and my background
           </p>
-          <hr class="mx-auto my-8 h-1 w-60 border-0 bg-gray-500" />
+          <div class="inline-flex items-center justify-center w-full">
+            <hr class="w-64 h-1 my-8 bg-gray-200 border-0 rounded dark:bg-gray-700">
+            <div class="absolute px-4 -translate-x-1/2 bg-white left-1/2 dark:bg-gray-900">
+                <svg aria-hidden="true" class="w-5 h-5 text-gray-700 dark:text-gray-300" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"/></svg>
+            </div>
+        </div>
         </div>
         <div class="flex flex-wrap -mx-4">
           <div class="w-full md:w-1/4 mb-6 px-4">
