--- a/v2/index.html
+++ b/v2/index.html
@@ -116,11 +116,12 @@
             </strong>
           </h1>
           <p class="text-slate-50 text-shadow shadow-gray-950 mt-4 sm:text-xl sm:leading-relaxed">
-            Join me on my journey as a self-taught web developer, breaking down
-            barriers to entry along the way
+            I am on a journey to overcome obstacles and achieve success as a self-taught web developer
           </p>
-          <div class="mt-8 flex flex-wrap justify-center gap-4">
-            <button class="block w-full sm:w-auto py-3 px-12 text-sm font-medium text-gray-900 bg-gray-50 rounded hover:text-gray-50 hover:bg-blue-500">Let's Go</button>
+          <div class="mt-8 flex flex-wrap justify-center">
+            <a href="#">
+              <button class="block w-full sm:w-auto py-3 px-12 text-sm font-medium text-gray-900 bg-gray-50 rounded hover:text-gray-50 hover:bg-blue-500">Follow Me</button>
+            </a>
           </div>
         </div>
         <div class="absolute inset-x-0 bottom-0">
