--- a/v2/index.html
+++ b/v2/index.html
@@ -147,9 +147,9 @@
 
     <!-- Blog -->
     <section id="blog">
-      <div class="flex lg:h-screen mx-auto max-w-7xl">
-        <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-0">
-          <div class="text-center mb-16 lg:mb-32">
+      <div class="flex mx-auto max-w-7xl">
+        <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
+          <div class="text-center w-full m-auto px-4 sm:px-6 lg:px-8 mb-16">
             <h1 class="text-4xl font-bold mb-4">My Journey</h1>
             <p class="text-lg">
               Follow along as I document and share my experiences
@@ -176,31 +176,130 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col md:flex-row md:space-x-6">
-            <div class="flex-shrink-0 w-full md:w-1/4 lg:w-1/4 mb-6 md:mb-0">
-              <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <img
-                  src="https://placehold.it/500x500"
-                  alt="Author's portrait"
-                  class="h-48 w-full object-cover object-center"
-                />
+          <div class="flex flex-col lg:flex-row lg:space-x-6">
+            <div
+              class="w-full flex items-center gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
+            >
+              <img
+                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                alt=""
+                class="h-10 w-10 rounded-full bg-gray-50"
+              />
+              <div class="text-sm leading-6">
+                <p class="font-semibold text-gray-900">
+                  <a href="#"> John Bouakhasith </a>
+                </p>
+                <p class="text-gray-600">Posted on April 1st, 2023</p>
+              </div>
+            </div>
+            <div class="w-full mb-6">
+              <div class="bg-white mb-6 rounded-lg shadow-md overflow-hidden">
                 <div class="p-6">
-                  <h2 class="text-xl font-semibold mb-2">Author Name</h2>
-                  <p class="text-gray-500 text-sm">
-                    Published on March 29, 2023
+                  <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
+                  <p class="text-lg mb-4">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
+                    viverra. A cras semper auctor neque vitae tempus. Commodo
+                    nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
+                    Fames ac turpis egestas maecenas pharetra convallis posuere
+                    morbi leo. Suscipit adipiscing bibendum est ultricies
+                    integer quis auctor elit sed. Morbi tristique senectus et
+                    netus et malesuada. Faucibus a pellentesque sit amet
+                    porttitor eget. Vivamus at augue eget arcu. Phasellus
+                    faucibus scelerisque eleifend donec pretium vulputate
+                    sapien.
                   </p>
+                  <p class="text-lg mb-4">
+                    Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
+                    faucibus vitae aliquet nec ullamcorper sit amet risus
+                    nullam. Velit aliquet sagittis id consectetur purus ut
+                    faucibus. Habitant morbi tristique senectus et netus. In
+                    nulla posuere sollicitudin aliquam. Elementum pulvinar etiam
+                    non quam lacus suspendisse faucibus interdum posuere. Nunc
+                    congue nisi vitae suscipit tellus mauris a diam maecenas.
+                    Maecenas accumsan lacus vel facilisis volutpat est velit
+                    egestas. Morbi tincidunt ornare massa eget. Et tortor at
+                    risus viverra adipiscing at in tellus integer. Congue mauris
+                    rhoncus aenean vel elit scelerisque mauris.
+                  </p>
+                  <p class="text-lg mb-4">
+                    Sed velit dignissim sodales ut eu sem integer vitae justo.
+                    Sit amet tellus cras adipiscing enim eu turpis egestas
+                    pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
+                    dictum sit amet justo. Accumsan sit amet nulla facilisi
+                    morbi tempus iaculis urna id. Sodales neque sodales ut etiam
+                    sit amet nisl purus in. Pharetra sit amet aliquam id diam
+                    maecenas. Sapien eget mi proin sed libero enim sed faucibus
+                    turpis. Non pulvinar neque laoreet suspendisse interdum
+                    consectetur libero. Ut etiam sit amet nisl purus in. Aenean
+                    pharetra magna ac placerat.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >Read more &rarr;</a
+                  >
                 </div>
               </div>
             </div>
-            <div class="w-full md:w-full lg:w-full">
+          </div>
+          <div class="flex flex-col lg:flex-row lg:space-x-6">
+            <div
+              class="w-full flex items-center gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
+            >
+              <img
+                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                alt=""
+                class="h-10 w-10 rounded-full bg-gray-50"
+              />
+              <div class="text-sm leading-6">
+                <p class="font-semibold text-gray-900">
+                  <a href="#"> John Bouakhasith </a>
+                </p>
+                <p class="text-gray-600">Posted on April 1st, 2023</p>
+              </div>
+            </div>
+            <div class="w-full">
               <div class="bg-white rounded-lg shadow-md overflow-hidden">
                 <div class="p-6">
                   <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
                   <p class="text-lg mb-4">
-                    Here's the content of the blog post.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
+                    viverra. A cras semper auctor neque vitae tempus. Commodo
+                    nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
+                    Fames ac turpis egestas maecenas pharetra convallis posuere
+                    morbi leo. Suscipit adipiscing bibendum est ultricies
+                    integer quis auctor elit sed. Morbi tristique senectus et
+                    netus et malesuada. Faucibus a pellentesque sit amet
+                    porttitor eget. Vivamus at augue eget arcu. Phasellus
+                    faucibus scelerisque eleifend donec pretium vulputate
+                    sapien.
                   </p>
                   <p class="text-lg mb-4">
-                    Here's some more content for the blog post.
+                    Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
+                    faucibus vitae aliquet nec ullamcorper sit amet risus
+                    nullam. Velit aliquet sagittis id consectetur purus ut
+                    faucibus. Habitant morbi tristique senectus et netus. In
+                    nulla posuere sollicitudin aliquam. Elementum pulvinar etiam
+                    non quam lacus suspendisse faucibus interdum posuere. Nunc
+                    congue nisi vitae suscipit tellus mauris a diam maecenas.
+                    Maecenas accumsan lacus vel facilisis volutpat est velit
+                    egestas. Morbi tincidunt ornare massa eget. Et tortor at
+                    risus viverra adipiscing at in tellus integer. Congue mauris
+                    rhoncus aenean vel elit scelerisque mauris.
+                  </p>
+                  <p class="text-lg mb-4">
+                    Sed velit dignissim sodales ut eu sem integer vitae justo.
+                    Sit amet tellus cras adipiscing enim eu turpis egestas
+                    pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
+                    dictum sit amet justo. Accumsan sit amet nulla facilisi
+                    morbi tempus iaculis urna id. Sodales neque sodales ut etiam
+                    sit amet nisl purus in. Pharetra sit amet aliquam id diam
+                    maecenas. Sapien eget mi proin sed libero enim sed faucibus
+                    turpis. Non pulvinar neque laoreet suspendisse interdum
+                    consectetur libero. Ut etiam sit amet nisl purus in. Aenean
+                    pharetra magna ac placerat.
                   </p>
                   <a href="#" class="text-blue-500 hover:text-blue-700"
                     >Read more &rarr;</a
@@ -214,10 +313,10 @@
     </section>
 
     <!-- Portfolio -->
-    <section id="portfolio" class="relative bg-gray-100">
-      <div class="flex lg:h-screen mx-auto max-w-7xl">
-        <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-0">
-          <div class="text-center mb-16 lg:mb-32">
+    <section id="portfolio" class="bg-gray-100">
+      <div class="w-full m-auto max-w-7xl py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
+        <div class="w-full m-auto">
+          <div class="text-center mb-16">
             <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
             <p class="text-lg">Take a look at some of my recent projects</p>
             <div class="inline-flex items-center justify-center w-full">
@@ -313,9 +412,9 @@
 
     <!-- About -->
     <section id="about" class="relative">
-      <div class="flex lg:h-screen mx-auto max-w-7xl">
-        <div class="w-full m-auto px-4 py-16 sm:px-6 lg:px-8 lg:py-0">
-          <div class="text-center mb-16 lg:mb-32">
+      <div class="w-full m-auto max-w-7xl py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
+        <div class="w-full m-auto">
+          <div class="text-center mb-16">
             <h1 class="text-4xl font-bold mb-4">About Me</h1>
             <p class="text-lg">
               Here's a little bit about myself and my background
