--- a/v2/index.html
+++ b/v2/index.html
@@ -176,9 +176,9 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col lg:flex-row lg:space-x-6">
+          <div class="flex flex-col lg:items-start lg:flex-row lg:space-x-6">
             <div
-              class="w-full flex items-center gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
+              class="w-full flex items-center lg:pt-6 gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
             >
               <img
                 src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
@@ -193,10 +193,14 @@
               </div>
             </div>
             <div class="w-full mb-6">
-              <div class="bg-white mb-6 rounded-lg shadow-md overflow-hidden">
-                <div class="p-6">
-                  <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
-                  <p class="text-lg mb-4">
+              <div
+                class="bg-white mb-6 border-gray-200 lg:border-l-4 overflow-hidden"
+              >
+                <div class="text-gray-900 lg:p-6">
+                  <h1 class="text-4xl text-gray-900 font-bold mb-4">
+                    Blog Post Header
+                  </h1>
+                  <p class="text-lg text-gray-600 mb-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
@@ -210,7 +214,7 @@
                     faucibus scelerisque eleifend donec pretium vulputate
                     sapien.
                   </p>
-                  <p class="text-lg mb-4">
+                  <p class="text-lg text-gray-600 mb-4">
                     Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
                     faucibus vitae aliquet nec ullamcorper sit amet risus
                     nullam. Velit aliquet sagittis id consectetur purus ut
@@ -223,7 +227,7 @@
                     risus viverra adipiscing at in tellus integer. Congue mauris
                     rhoncus aenean vel elit scelerisque mauris.
                   </p>
-                  <p class="text-lg mb-4">
+                  <p class="text-lg text-gray-600 mb-4">
                     Sed velit dignissim sodales ut eu sem integer vitae justo.
                     Sit amet tellus cras adipiscing enim eu turpis egestas
                     pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
@@ -242,9 +246,9 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col lg:flex-row lg:space-x-6">
+          <div class="flex flex-col lg:items-start lg:flex-row lg:space-x-6">
             <div
-              class="w-full flex items-center gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
+              class="w-full flex items-center lg:pt-6 gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
             >
               <img
                 src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
@@ -259,10 +263,14 @@
               </div>
             </div>
             <div class="w-full">
-              <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <div class="p-6">
-                  <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
-                  <p class="text-lg mb-4">
+              <div
+                class="bg-white mb-6 border-gray-200 lg:border-l-4 overflow-hidden"
+              >
+                <div class="lg:p-6">
+                  <h1 class="text-4xl text-gray-900 font-bold mb-4">
+                    Blog Post Header
+                  </h1>
+                  <p class="text-lg text-gray-600 mb-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
@@ -276,7 +284,7 @@
                     faucibus scelerisque eleifend donec pretium vulputate
                     sapien.
                   </p>
-                  <p class="text-lg mb-4">
+                  <p class="text-lg text-gray-600 mb-4">
                     Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
                     faucibus vitae aliquet nec ullamcorper sit amet risus
                     nullam. Velit aliquet sagittis id consectetur purus ut
@@ -289,7 +297,7 @@
                     risus viverra adipiscing at in tellus integer. Congue mauris
                     rhoncus aenean vel elit scelerisque mauris.
                   </p>
-                  <p class="text-lg mb-4">
+                  <p class="text-lg text-gray-600 mb-4">
                     Sed velit dignissim sodales ut eu sem integer vitae justo.
                     Sit amet tellus cras adipiscing enim eu turpis egestas
                     pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
@@ -342,6 +350,48 @@
             </div>
           </div>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div>
+              <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img
+                  src="https://placehold.it/600x400"
+                  alt="Project Image"
+                  class="h-64 w-full object-cover object-center"
+                />
+                <div class="p-6">
+                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
+                  <p class="text-gray-500 text-sm mb-4">
+                    Technologies used: HTML, CSS, JavaScript
+                  </p>
+                  <p class="text-lg mb-4">
+                    A short description of the project.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >View project &rarr;</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <img
+                  src="https://placehold.it/600x400"
+                  alt="Project Image"
+                  class="h-64 w-full object-cover object-center"
+                />
+                <div class="p-6">
+                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
+                  <p class="text-gray-500 text-sm mb-4">
+                    Technologies used: HTML, CSS, JavaScript
+                  </p>
+                  <p class="text-lg mb-4">
+                    A short description of the project.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >View project &rarr;</a
+                  >
+                </div>
+              </div>
+            </div>
             <div>
               <div class="bg-white rounded-lg shadow-md overflow-hidden">
                 <img
